--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 ## Abstract
 
 Introducing the Consilience Equation, a novel framework that synergizes holistic and reductionist paradigms for data analysis. 
-This groundbreaking paper unveils the equation for the first time, elucidating its mathematical formulation, implementation in machine 
+This paper unveils the equation for the first time, elucidating its mathematical formulation, implementation in machine 
 learning, potential applications in biomimicry, and a code interpretation to generate visuals and unique perspectives.
 
 ## Introduction
